@@ -1,6 +1,8 @@
 2012-11-21
 * fix errors in database creation script, add preliminary blacklisting
 capabilities.
+* fix error in bat/bruteforce.py: actually use the checksum instead of the
+size, which could have lead to misclassifications
 
 2012-11-16
 * rewrite leafscans to return a dictionary instead of a list of dictionaries
